--- a/shop.html
+++ b/shop.html
@@ -119,6 +119,94 @@
           <h4 class="product-price">8.00</h4>
           <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
         </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/pencil.jpeg" alt="pencil" class="product-img">
+          </div>
+          <h3 class="product-name">Pencil</h3>
+          <h4 class="product-price">10.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/pencil case.jpeg" alt="pencil case" class="product-img">
+          </div>
+          <h3 class="product-name">Pencil Case</h3>
+          <h4 class="product-price">20.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/pen.jpeg" alt="pen" class="product-img">
+          </div>
+          <h3 class="product-name">Pen</h3>
+          <h4 class="product-price">10.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/highlighter.jpeg" alt="highlighter" class="product-img">
+          </div>
+          <h3 class="product-name">Highlighter</h3>
+          <h4 class="product-price">15.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/gluestick.jpeg" alt="gluestick" class="product-img">
+          </div>
+          <h3 class="product-name">Glue Stick</h3>
+          <h4 class="product-price">17.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/eraser.jpeg" alt="eraser" class="product-img">
+          </div>
+          <h3 class="product-name">Eraser</h3>
+          <h4 class="product-price">5.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/clipboard.jpeg" alt="clipboard" class="product-img">
+          </div>
+          <h3 class="product-name">Clipboard</h3>
+          <h4 class="product-price">50.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/scissor.jpeg" alt="scissor" class="product-img">
+          </div>
+          <h3 class="product-name">Scissor</h3>
+          <h4 class="product-price">20.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/sharpener.jpg" alt="sharpener" class="product-img">
+          </div>
+          <h3 class="product-name">Sharpener</h3>
+          <h4 class="product-price">6.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/geometry set.jpg" alt="geometry set" class="product-img">
+          </div>
+          <h3 class="product-name">Geometry Box</h3>
+          <h4 class="product-price">95.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="/WorkSupplyHub-OfficeShopping/images/ruler.jpg" alt="ruler" class="product-img">
+          </div>
+          <h3 class="product-name">Ruler</h3>
+          <h4 class="product-price">15.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
       </div>
     </section>
     <div class="cart-container" id="basket">
