--- a/shop.html
+++ b/shop.html
@@ -199,6 +199,71 @@
           <h4 class="product-price">95.00</h4>
           <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
         </div>
+        <!-- My changes -->
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://cdn.pixabay.com/photo/2014/03/24/17/21/organizer-295500_640.png" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Notepad</h3>
+          <h4 class="product-price">49.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/09/47/adhesive-tape-156017_1280.png" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Sellotape</h3>
+          <h4 class="product-price">39.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://media.istockphoto.com/id/1424596730/photo/august-2023-calendar-isolated-on-white-background-3d-illustration.webp?b=1&s=170667a&w=0&k=20&c=qpKyZHzn7VT0RUVYYvkeL9h_rLaKq1VT_NG23TfqyX4=" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Desk Calendar</h3>
+          <h4 class="product-price">249.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://media.istockphoto.com/id/160380266/photo/black-computer-mouse-resting-on-bright-blue-mousepad.webp?b=1&s=170667a&w=0&k=20&c=sPmZey5jeof34snlPlNsuMaMWQ50cGolfiy_1sUDYoE=" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Mouse Pad</h3>
+          <h4 class="product-price">249.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://images.unsplash.com/photo-1587117266184-2fbb10ccc05e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fE1hcmtlcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Markers</h3>
+          <h4 class="product-price">49.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://img.freepik.com/free-vector/row-colored-office-ring-binders_1284-71694.jpg?size=626&ext=jpg&ga=GA1.1.1445118326.1696907406&semt=ais" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">File Folders</h3>
+          <h4 class="product-price">249.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://img.freepik.com/free-photo/levitating-music-headphones-display_23-2149817602.jpg?size=626&ext=jpg&ga=GA1.1.1445118326.1696907406&semt=sph" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Headphones</h3>
+          <h4 class="product-price">499.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://img.freepik.com/free-vector/black-mug-isolated_1284-42454.jpg?size=626&ext=jpg&ga=GA1.1.1445118326.1696907406&semt=ais" alt="paper clips" class="product-img">
+          </div>
+          <h3 class="product-name">Coffee Mug</h3>
+          <h4 class="product-price">199.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
+        </div>
       </div>
     </section>
     <div class="cart-container" id="basket">
