--- a/shop.html
+++ b/shop.html
@@ -264,6 +264,28 @@
           <h4 class="product-price">199.00</h4>
           <button class="product-add" data-action="ADD_TO_CART">Add to cart</button>
         </div>
+
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://m.media-amazon.com/images/I/71m+EGqdJ0L._UY695_.jpg" alt="Shoes" class="product-img">
+          </div>
+          <h3 class="product-name">US Polo Men Shoes</h3>
+          <h4 class="product-price">1349.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART" >Add to cart</button>
+        </div>
+
+        <div class="product-card">
+          <div class="product-image-wrapper">
+            <img src="https://writingsonthewall.in/cdn/shop/products/Woman-in-Black-Oil-Painting-Oil-Painting-Writings-On-The-Wall-274.jpg?v=1675102669&width=823" alt="Product 4" class="product-img">
+          </div>
+          <h3 class="product-name">Woman Oil Painting</h3>
+          <h4 class="product-price">12925.00</h4>
+          <button class="product-add" data-action="ADD_TO_CART" >Add to cart</button>
+        </div>
+
+
+
+        
       </div>
     </section>
     <div class="cart-container" id="basket">
