--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
   <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -330,7 +329,7 @@ button:hover{
           </div> -->
       </div>
     </div>
-    <nav>
+    <nav >
       <a href="#" class="logo">
         <img src="https://img.icons8.com/bubbles/452/office.png" class="icon_office" alt="Logo image">
       </a>
@@ -358,11 +357,16 @@ button:hover{
       <li><a href="service.html">Service</a></li>
       <li><a href="contact.html">Contact Us</a></li>
       </ul>
-      <a href="cart.html" class="shop-cart">
+      <!-- <a href="cart.html" class="shop-cart">
         <img src="https://img.icons8.com/external-icongeek26-outline-icongeek26/344/external-cart-ecommerce-icongeek26-outline-icongeek26.png" class="icon_cart" alt="Shopping cart"><span class="dot"></span>
+      </a> -->
+      <div >
+      <i class="fa-solid fa-cart-shopping fa-2xl" style="margin: 10px; cursor: pointer;"></i>
+      <a href="./login.html" style="text-decoration: none; color: black;" target="_blank">
+      <i class="fa-regular fa-user fa-2xl"  style="margin: 10px; cursor: pointer;"></i>
       </a>
+      </div>
     </nav>
-    
   </header>
   <main class="wrapper">
     <section id="branding">
