--- a/contact.html
+++ b/contact.html
@@ -191,8 +191,8 @@ a {
     
           <div class="mobileMenu" id="mobile">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="index.php">Home</a></li>
+                <li><a href="shop.php">Shop</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="service.html">Services</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -200,8 +200,8 @@ a {
         </div>
     
           <ul class="fullSize">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a href="index.php">Home</a></li>
+          <li><a href="shop.php">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="service.html">Service</a></li>
           <li><a href="contact.html">Contact Us</a></li>
