--- a/service.html
+++ b/service.html
@@ -336,13 +336,6 @@ button:hover{
   <header id="header">
       <div class="banner">
         <img src="service.png" alt="Office Photo">
-        <!-- The rest of your banner content -->
-        <div class="content">
-          <!-- <h1>EXPLORE THE OFFICE</h1> -->
-          <!-- <div>
-              <button type="button">Explore</button>
-          </div> -->
-        </div>
       </div>
     <nav>
       <a href="#" class="logo">
@@ -354,20 +347,9 @@ button:hover{
         <span class="spn2"></span>
         <span class="spn3"></span>
       </div>
-
-      <!-- <div class="mobileMenu" id="mobile">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div> -->
-
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.php">Home</a></li>
+      <li><a href="shop.php">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
       <li><a href="contact.html">Contact Us</a></li>
