--- a/about.html
+++ b/about.html
@@ -11,8 +11,6 @@
   header {
   display: flex;
   justify-content: space-around;
-  /* align-items: center; */
-  /* position: relative; */
   width: 100%;
   height: 80vh;
   background-image: url("office_start.jpg");
@@ -37,8 +35,8 @@
 
       <div class="mobileMenu" id="mobile">
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="index.php">Home</a></li>
+            <li><a href="shop.php">Shop</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="service.html">Service</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -46,8 +44,8 @@
     </div>
 
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.php">Home</a></li>
+      <li><a href="shop.php">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
       <li><a href="contact.html">Contact Us</a></li>
