--- a/home.html
+++ b/home.html
@@ -314,20 +314,8 @@ button:hover{
       <video autoplay loop muted plays-inline>
           <source src="office_vid.mp4" type="video/mp4">
       </video>
-      <!-- <div class="navbar">
-          <img class="logo" src="logo.png">
-          <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Travel</a></li>
-              <li><a href="#">Blogs</a></li>
-              <li><a href="#">Support</a></li>
-          </ul>
-      </div> -->
       <div class="content">
           <h1>EXPLORE THE OFFICE</h1>
-          <!-- <div>
-              <button type="button">Explore</button>
-          </div> -->
       </div>
     </div>
     <nav>
@@ -341,19 +329,9 @@ button:hover{
         <span class="spn3"></span>
       </div>
 
-      <!-- <div class="mobileMenu" id="mobile">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div> -->
-
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.php">Home</a></li>
+      <li><a href="shop.php">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
       <li><a href="contact.html">Contact Us</a></li>
@@ -401,13 +379,6 @@ button:hover{
                   <a href="#" class="btn btn-outline-primary">Learn More</a>
                 </p>
               </div>
-              <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-                <div class="bg-1"></div> -->
-                <!-- <a href="office_vid.mp4" data-fancybox class="video-wrap">
-                  <span class="play-wrap"><span class="icon-play"></span></span> -->
-                  <!-- <img src="office_start.jpg" alt="Image" class="img-fluid rounded"> -->
-                <!-- </a>
-              </div> -->
               <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="bg-1">
                   <img src="office_start.jpg" alt="Image" class="img-fluid rounded" id="brand-image">
@@ -415,8 +386,6 @@ button:hover{
               </div>
           </div>
         </div>
-      <!-- </div>
-    </section> -->
     
     <section id="shop">
       <h2>Top Grossing Products</h2>
