--- a/ShopingOffice/signup.html
+++ b/ShopingOffice/signup.html
@@ -35,6 +35,29 @@
             border-radius: 4px;
         }
 
+            .main-content {
+            border: 2px solid orange;
+            border-radius: 3px;
+            padding: 7px;
+            border: 0.5px solid #111;
+            margin: 100px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            width: 300px;
+            transition: 0.5s;
+            /* width: 100px; */
+            color: black;
+            background: #d6e1eb;
+            padding: 20px;
+            margin: auto;
+            border-radius: 5px;
+            transition: 0.5s;
+         }
+         .main-content:hover {
+            color: rgb(227, 33, 227);
+            box-shadow: 0 5px 15px #10526e;
+         }
+
         .main-content h1 {
             text-align: center;
             margin-bottom: 20px;
