Folder-structure & image-bug-fix

--- a/ShopingOffice/contact.html
+++ b/ShopingOffice/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Office shop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/style.css">
   <!-- Add reference code stylesheets and scripts -->
   <link rel="stylesheet" href="assets/css/all.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -191,7 +191,7 @@ a {
     
           <div class="mobileMenu" id="mobile">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="service.html">Services</a></li>
@@ -200,7 +200,7 @@ a {
         </div>
     
           <ul class="fullSize">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="service.html">Service</a></li>
@@ -227,7 +227,7 @@ a {
               </div>
               <div id="form_status"></div>
               <div class="contact-form">
-                <form action="1.php" method="POST" id="fruitkha-contact" onSubmit="return valid_datas( this );">
+                <form action="./scripts/1.php" method="POST" id="fruitkha-contact" onSubmit="return valid_datas( this );">
                   <p>
                     <input type="text" placeholder="Name" name="name" id="name">
                     <input type="email" placeholder="Email" name="email" id="email">
@@ -296,7 +296,7 @@ a {
         </div>
       </footer>
       <p class="bottomfooter">Coded with <i class="fa-solid fa-heart"></i> by Group-5</a></p>
-      <script src="scripts.js"></script>
+      <script src="./scripts/scripts.js"></script>
   
   <!-- Add reference code scripts -->
   <script src="assets/js/jquery-1.11.3.min.js"></script>
