--- a/ShopingOffice/shop.html
+++ b/ShopingOffice/shop.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Office shop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
   <header id="header">
@@ -23,7 +23,7 @@
 
       <div class="mobileMenu" id="mobile">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="service.html">Service</a></li>
@@ -32,7 +32,7 @@
     </div>
 
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
@@ -121,7 +121,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/pencil.jpeg" alt="pencil" class="product-img">
+            <img src="./images/pencil.jpeg" alt="pencil" class="product-img">
           </div>
           <h3 class="product-name">Pencil</h3>
           <h4 class="product-price">10.00</h4>
@@ -129,7 +129,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/pencil case.jpeg" alt="pencil case" class="product-img">
+            <img src="./images/pencil-case.jpeg" alt="pencil case" class="product-img">
           </div>
           <h3 class="product-name">Pencil Case</h3>
           <h4 class="product-price">20.00</h4>
@@ -137,7 +137,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/pen.jpeg" alt="pen" class="product-img">
+            <img src="./images/pen.jpeg" alt="pen" class="product-img">
           </div>
           <h3 class="product-name">Pen</h3>
           <h4 class="product-price">10.00</h4>
@@ -145,7 +145,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/highlighter.jpeg" alt="highlighter" class="product-img">
+            <img src="./images/highlighter.jpeg" alt="highlighter" class="product-img">
           </div>
           <h3 class="product-name">Highlighter</h3>
           <h4 class="product-price">15.00</h4>
@@ -153,7 +153,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/gluestick.jpeg" alt="gluestick" class="product-img">
+            <img src="./images/gluestick.jpeg" alt="gluestick" class="product-img">
           </div>
           <h3 class="product-name">Glue Stick</h3>
           <h4 class="product-price">17.00</h4>
@@ -161,7 +161,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/eraser.jpeg" alt="eraser" class="product-img">
+            <img src="./images/eraser.jpeg" alt="eraser" class="product-img">
           </div>
           <h3 class="product-name">Eraser</h3>
           <h4 class="product-price">5.00</h4>
@@ -169,7 +169,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/clipboard.jpeg" alt="clipboard" class="product-img">
+            <img src="./images/clipboard.jpeg" alt="clipboard" class="product-img">
           </div>
           <h3 class="product-name">Clipboard</h3>
           <h4 class="product-price">50.00</h4>
@@ -177,7 +177,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/scissor.jpeg" alt="scissor" class="product-img">
+            <img src="./images/scissor.jpeg" alt="scissor" class="product-img">
           </div>
           <h3 class="product-name">Scissor</h3>
           <h4 class="product-price">20.00</h4>
@@ -185,7 +185,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/sharpener.jpg" alt="sharpener" class="product-img">
+            <img src="./images/sharpener.jpg" alt="sharpener" class="product-img">
           </div>
           <h3 class="product-name">Sharpener</h3>
           <h4 class="product-price">6.00</h4>
@@ -193,7 +193,7 @@
         </div>
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img src="file:///C:/xampp/htdocs/ShopingOffice/images/geometry set.jpg" alt="geometry set" class="product-img">
+            <img src="./images/geometry set.jpg" alt="geometry set" class="product-img">
           </div>
           <h3 class="product-name">Geometry Box</h3>
           <h4 class="product-price">95.00</h4>
@@ -379,6 +379,6 @@
     </div>
   </footer>
   <p class="bottomfooter">Coded with <i class="fa-solid fa-heart"></i> by Group-5</a></p>
-  <script src="scripts.js"></script>
+  <script src="./scripts/scripts.js"></script>
 </body>
 </html>
