--- a/ShopingOffice/about.html
+++ b/ShopingOffice/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Office shop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/style.css">
   <style>
   header {
   display: flex;
@@ -15,7 +15,7 @@
   /* position: relative; */
   width: 100%;
   height: 80vh;
-  background-image: url("office_start.jpg");
+  background-image: url("./images/office_start.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -37,7 +37,7 @@
 
       <div class="mobileMenu" id="mobile">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="service.html">Service</a></li>
@@ -46,7 +46,7 @@
     </div>
 
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
@@ -151,6 +151,6 @@
     </div>
   </footer>
   <p class="bottomfooter">Coded with <i class="fa-solid fa-heart"></i> by Group-5</a></p>
-  <script src="scripts.js"></script>
+  <script src="./scripts/scripts.js"></script>
 </body>
 </html>
