--- a/ShopingOffice/service.html
+++ b/ShopingOffice/service.html
@@ -14,10 +14,10 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="fonts/icomoon/./assets/style.css">
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="css/./assets/style.css"> -->
 
   <title>Office shop</title>
 <style>
@@ -367,14 +367,14 @@ button:hover{
   
 </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
   
     
   <header id="header">
       <div class="banner">
-        <img src="service.png" alt="Office Photo">
+        <img src="./images/service.jpg" alt="Office Photo">
         <!-- The rest of your banner content -->
         <div class="content">
           <!-- <h1>EXPLORE THE OFFICE</h1> -->
@@ -396,7 +396,7 @@ button:hover{
 
       <!-- <div class="mobileMenu" id="mobile">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="service.html">Service</a></li>
@@ -405,7 +405,7 @@ button:hover{
     </div> -->
 
       <ul class="fullSize">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="about.html">About us</a></li>
       <li><a href="service.html">Service</a></li>
@@ -566,7 +566,7 @@ button:hover{
    
   </footer>
   <p class="bottomfooter">Coded with <i class="fa-solid fa-heart"></i> by Group-5</a></p>
-  <script src="scripts.js"></script>
+  <script src="./scripts/scripts.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 </body>
