--- a/ShopingOffice/signup.html
+++ b/ShopingOffice/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <style>
         /* Reset some default styles */
         body,
@@ -104,7 +104,7 @@
           </center>
         <div class="main-content">
             <h1>Sign Up</h1>
-            <form action="signup.php" method="post">
+            <form action="./scripts/signup.php" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" required>
